# spi

./: .gitignore  Makefile  assignment2.txt  assignment3.txt  assignment4.txt  calc.pl  calc.py  calc.rb  calc1.py  part13.pas  spi.cpp  spi.pl  spi.py  spi.rb  symtab4.pas  url
.github/workflows/: rust.yml
rust/: Cargo.toml
rust/src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
rust/src/interpreting/: interpreter.rs  misc.rs  mod.rs  symbol_table.rs  types.rs
rust/src/lexing/: lexer.rs  token.rs
rust/src/parsing/: ast.rs  mod.rs  parser.rs  tests.rs
