[package]
name = "spi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
strum = "0.23"
strum_macros = "0.23"
case_insensitive_hashmap = "1.0.0"
clap = { version = "3.0.7", features = ["derive"] }
cli-table = "0.4"
